2002-08-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graph3d.c: Obvious typo "inrange (0.0, X_AXIS.min, Y_AXIS.max)"
	corrected.

2002-08-24  Ethan Merritt <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/graphics.c src/save.c src/set.c src/show.c
	src/unset.c docs/gnuplot.doc: Allow text rotation by artibitrary angle
	in tic labels `set xtics rotate by <ang>`.

2002-08-24  Ethan Merritt <merritt@u.washington.edu>

	* term/post.trm: Detect and modify non-PostScript font names to insure 
	that legal PostScript is generated and that font size is correct.

2002-08-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/fig.trm: Don't reset terminal options. Improved documentation.

2002-08-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/gd.trm: New option 'set term png ... {no}crop'.

2002-08-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gnuplot.doc: Added documentation that 'set term <term>' does not
	reset (previous) options.

2002-08-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c docs/gnuplot.doc: Parsing datafile lines that contain
	quoted strings: "hello world" is now accepted as a single column.

2002-08-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/svg.trm: Support arbitrary text rotations.

2002-08-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c: Fixed 'reset; splot ... with pm3d at ...'.

2002-08-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gplt_x11.c: Removed unused field 'offset' from 'struct
	t_sm_palette'.

2002-08-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.h src/color.c: Removed unused field 'offset' from 'struct
	t_sm_palette'.

2002-08-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Added documentation for 'set label ... font'.

2002-08-19  Harald Harders  <h.harders@tu-bs.de>

	* docs/gnuplot.doc src/misc.c src/tables.c: Let style 'with vectors'
	use plural (as all other plotting styles) instead of singular